feat: Add vehicel image upload API
